add jsfuck02 & add base tag

--- a/themes/cyanstyle/layout/_partial/head.ejs
+++ b/themes/cyanstyle/layout/_partial/head.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  
+  <base target="_blank" />
   <% if (page.description){ %>
   <meta name="description" content="<%= page.description %>" />
   <% } else if (config.description){ %>
