--- a/themes/cyanstyle/layout/_partial/head.ejs
+++ b/themes/cyanstyle/layout/_partial/head.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <base target="_blank" />
+  <meta name="baidu-site-verification" content="fMNlfUVVLO" />
   <% if (page.description){ %>
   <meta name="description" content="<%= page.description %>" />
   <% } else if (config.description){ %>
