add my github link

--- a/themes/cyanstyle/layout/_partial/footer.ejs
+++ b/themes/cyanstyle/layout/_partial/footer.ejs
@@ -1,5 +1,5 @@
 <footer id="colophon" role="contentinfo">
-    <p>&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
+    <p>&copy; <%= date(new Date(), 'YYYY') %> <a href="https://github.com/jserNc/" target="_blank"><%= config.author || config.title %></a>
     All rights reserved.</p>
     <p>Powered by 
         <a href="http://hexo.io/" target="_blank">Hexo</a>
