--- a/themes/cyanstyle/layout/_partial/footer.ejs
+++ b/themes/cyanstyle/layout/_partial/footer.ejs
@@ -1,7 +1,6 @@
 <footer id="colophon" role="contentinfo">
     <p>&copy; <%= date(new Date(), 'YYYY') %> <a href="https://github.com/jserNc/" target="_blank"><%= config.author || config.title %></a>
-    All rights reserved.</p>
-    <p>Powered by 
+    All rights reserved. Powered by 
         <a href="http://hexo.io/" target="_blank">Hexo</a>
     </p>
     <p>
