--- a/themes/cyanstyle/source/css/style.css
+++ b/themes/cyanstyle/source/css/style.css
@@ -646,6 +646,15 @@ a:hover {
 	z-index: 100000; /* Above WP toolbar */
 }
 
+/* wangyiyun comment */
+#cloud-tie-wrapper.cloud-tie-wrapper{
+	margin-top: 30px;
+}
+
+#cloud-tie-wrapper #yun-tie-sdk-wrap {
+	background-color: #e7eff4;
+}
+
 /* Page structure */
 .site {
 	padding: 0 24px;
