--- a/themes/cyanstyle/source/css/style.css
+++ b/themes/cyanstyle/source/css/style.css
@@ -598,7 +598,7 @@ a:hover {
 
 /* Backgroud image */
 #bg {
-  background-image: url("images/20170420_6.jpg");
+  background-image: url("images/by3.jpg");
   background-color: #050a10;
   background-attachment: fixed;
   background-repeat: no-repeat;
