uyan comment system

--- a/themes/cyanstyle/layout/_partial/comment.ejs
+++ b/themes/cyanstyle/layout/_partial/comment.ejs
@@ -1,16 +1,8 @@
 <% if (!index && (page.path !== 'demo/index.html') && post.comments){ %>
 <section id="comments">
-  <!--网易云跟帖 开始-->
-  <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
-  <script>
-  var cloudTieConfig = {
-    url: document.location.href, 
-    sourceId: "",
-    productKey: "5a032688db1348678f3949687092d2c3",
-    target: "cloud-tie-wrapper"
-  };
-  </script>
-  <script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
-  <!--网易云跟帖 结束-->
+  <!--友言 开始-->
+    <div id="uyan_frame"></div>
+    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2143418"></script>
+  <!--友言 结束-->
 </section>
 <% } %>
