--- a/themes/cyanstyle/layout/_partial/comment.ejs
+++ b/themes/cyanstyle/layout/_partial/comment.ejs
@@ -1,8 +1,21 @@
 <% if (!index && (page.path !== 'demo/index.html') && post.comments){ %>
 <section id="comments">
-  <!--友言 开始-->
-    <div id="uyan_frame"></div>
-    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2143418"></script>
-  <!--友言 结束-->
+  <!--Gitment 开始-->
+	<div id="git-container"></div>
+	<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
+	<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+	<script>
+	var gitment = new Gitment({
+	  id: '页面 ID', // 可选。默认为 location.href
+	  owner: 'jserNc',
+	  repo: 'enjoyjs-gitment',
+	  oauth: {
+	    client_id: '6347bf778a39d0dcae14',
+	    client_secret: '10a5b94c9d66b90d35d075ab0415901be6f6db5c',
+	  },
+	})
+	gitment.render('git-container')
+	</script>
+  <!--Gitment 结束-->
 </section>
 <% } %>
