--- a/themes/cyanstyle/layout/_partial/after-footer.ejs
+++ b/themes/cyanstyle/layout/_partial/after-footer.ejs
@@ -24,7 +24,7 @@ $(document).ready(function () {
         trigger: 100,  
         bottomOffset: 62,       //距底部偏移量   
         locationOffset: 150,     //距右部偏移量  
-        title: '返回顶部',  
+        title: '',  
         titleAsText: true       //是否显示title  
     });  
 }); 
